# samsung-review-nlp-analyzer

./: .dockerignore  .env.example  Dockerfile.api  Dockerfile.frontend  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yaml
data/: reviews.csv  reviews_cleaned.csv  reviews_uk.csv  reviews_uk_cleaned.csv
notebooks/: 01_eda_cleaning.ipynb  01_scraping.ipynb  02_eda.ipynb
prompts/: rag_system_prompt.txt
src/: app.py  config.py  export_data_to_database.py  factory.py  retrieval.py  scraping.py
src/core/: config.py
src/data/: export_data_to_database.py  factory.py  retrieval.py  scraping.py
src/rag/: factory.py
src/serving/: app.py  chain.py  frontend.py
tests/: conftest.py  test_api.py  test_data_factory.py  test_data_retrieval.py  test_rag_factory.py
