[project]
name = "smartthings-nlp-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dateparser>=1.3.0",
    "ipykernel>=7.2.0",
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]

[tool.ruff]
line-length = 88
indent-width = 4
src = ["src"]
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py", "notebooks/*"]

[tool.ruff.lint]
# Select which rule categories are enabled
# (E: pycodestyle errors, F: pyflakes, I: import-related, B: bugbears, UP: plugins)
select = ["E", "F", "I", "UP", "B"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "single"
