[project]
name = "smartthings-nlp-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dateparser>=1.3.0",
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "langchain>=1.2.11",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "langchain-pinecone>=0.2.13",
    "pandas>=3.0.1",
    "pinecone<8.0.0",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]

[tool.ruff]
line-length = 88
indent-width = 4
src = ["src"]
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py", "notebooks/*"]

[tool.ruff.lint]
# Select which rule categories are enabled
# (E: pycodestyle errors, F: pyflakes, I: import-related, B: bugbears, UP: plugins)
select = ["E", "F", "I", "UP", "B"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "single"
