[project]
name = "smartthings-nlp-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "altair>=4.0.0,<6.0.0",
    "beautifulsoup4>=4.14.3",
    "dateparser>=1.3.0",
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "ipykernel>=7.2.0",
    "langchain>=1.2.11",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "langchain-pinecone>=0.2.13",
    "pandas>=2.0.0,<3.0.0",
    "pinecone<8.0.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.3",
    "streamlit>=1.40.0",
    "torch>=2.10.0",
    "uvicorn>=0.41.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.5",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.1",
]

[tool.ruff]
line-length = 88
indent-width = 4
src = ["src"]
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py", "notebooks/*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests that mock external dependencies",
    "integration: Integration tests that test multiple components",
    "slow: Tests that take significant time to run",
]

[tool.ruff.lint]
# Select which rule categories are enabled
# (E: pycodestyle errors, F: pyflakes, I: import-related, B: bugbears, UP: plugins)
select = ["E", "F", "I", "UP", "B"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "single"
